# gemm

./: README.md  makefile  pyproject.toml
src/: benchmark.py  main.py  optimize.py  plot_results.py
src/CudaKernels/: .clangd  CMakeLists.txt  __init__.py  annotations.py  cublas.cu  gemm_01.cu  gemm_02.cu  gemm_03.cu  gemm_04.cu  gemm_05.cu  gemm_06.cu  gemm_07.cu  gemm_08.cu  test.cu
